K8s_manifests/todo-app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo-list-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: 875506561855.dkr.ecr.us-east-1.amazonaws.com/todo-nodejs-app:v1.0.0.32
        ports:
        - containerPort: 4000
      imagePullSecrets:
        - name: ecr-creds
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-list-app
spec:
  type: ClusterIP
  selector:
    app: todo  
  ports:
    - port: 4000
      targetPort: 4000
